--- a/src/amoled-cord.css
+++ b/src/amoled-cord.css
@@ -1165,3 +1165,16 @@ body .contentWrapper-3RqEiS .accordionContainer-vSTU_l {
 :is(.theme-dark, .theme-midnight) .sidebar_a4d4d9 .panels_a4d4d9 .container_b2ca13 {
   background-color: var(--background-primary);
 }
+/* Remove Big Nitro Button */
+[href="/store"] {
+	display: none;
+}
+[href="/nitro"] {
+	display: none;
+}
+[href="/shop"] {
+	display: none;
+}
+[href="/overlay2"] {
+	display: none;
+}
